# example-todo-fullstack-rust

./: README.md
example-todo-backend/: Cargo.toml  sqlite.db
example-todo-backend/migrations/: 20241227010536_init.up.sql
example-todo-backend/src/: crud.rs  database.rs  handler.rs  lib.rs  main.rs  models.rs  state.rs
example-todo-backend/tests/: integration_test.rs  lib.rs  unit_tests.rs
example-todo-frontend/: package-lock.json  package.json
example-todo-frontend/src/: App.tsx
example-todo-frontend/src-tauri/: Cargo.toml  tauri.conf.json
example-todo-frontend/src-tauri/src/: lib.rs  main.rs
example-todo-frontend/src/api/: todo.ts
