[package]
name = "example-todo-backend"
version = "0.1.0"
edition = "2021"


[dependencies]
sqlx = { version = "0.8.2",  features = ["chrono", "sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7.9", features = ["json"] }
tower = "0.5.2"
reqwest = { version = "0.12.10", features = ["json"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[lib]
name = "example_todo_backend"
path = "src/lib.rs"
